--- a/Dashboard_Application/Controls/app/src/main/res/layout/activity_home.xml
+++ b/Dashboard_Application/Controls/app/src/main/res/layout/activity_home.xml
@@ -16,7 +16,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:textSize="70dp"
-        android:id="@+id/txtControlCenterHome" />
+        android:id="@+id/txtControlCenterHome"
+        android:textAlignment="center" />
 
     <ImageButton
         android:layout_width="200dp"
