--- a/Dashboard_Application/Controls/app/src/main/res/layout/activity_home.xml
+++ b/Dashboard_Application/Controls/app/src/main/res/layout/activity_home.xml
@@ -8,7 +8,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.ist440.controls.Home">
+    tools:context="com.ist440.controls.Home"
+    android:background="#494949"
+    android:clickable="true">
 
     <TextView
         android:text="Control Center Home"
@@ -17,7 +19,8 @@
         android:layout_centerHorizontal="true"
         android:textSize="70dp"
         android:id="@+id/txtControlCenterHome"
-        android:textAlignment="center" />
+        android:textAlignment="center"
+        android:textColor="#ffffff" />
 
     <ImageButton
         android:layout_width="200dp"
@@ -44,6 +47,7 @@
         android:textAlignment="center"
         android:layout_below="@+id/txtControlCenterHome"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:textColor="#ffffff" />
 
 </RelativeLayout>
