--- a/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
+++ b/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.ist440.controls.LightsControl">
+    tools:context="com.ist440.controls.LightsControl"
+    android:background="#494949">
 
     <TextView
         android:text="Lighting Controls"
@@ -16,5 +17,23 @@
         android:textSize="70dp"
         android:id="@+id/lblLightingControls"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textColor="#ffffff" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Fog Lights"
+        android:id="@+id/switchFogLights"
+        android:layout_below="@+id/lblLightingControls"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textSize="28dp"
+        android:textColor="#ffffff"
+        android:trackTint="#ffffff"
+        android:splitTrack="false"
+        android:singleLine="false"
+        android:showText="true"
+        android:switchPadding="15dp"
+        android:switchMinWidth="10dp" />
 </RelativeLayout>
