--- a/SafetyAndAccessControlSystem/AndroidApp/app/src/main/res/layout/activity_main.xml
+++ b/SafetyAndAccessControlSystem/AndroidApp/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="saac.androidapp.Main">
+    tools:context="saac.androidapp.Main"
+    android:background="#000000">
 
     <Button
         android:layout_width="100dp"
@@ -26,7 +27,9 @@
         android:clickable="true"
         android:singleLine="false"
         android:focusable="false"
-        android:longClickable="true" />
+        android:longClickable="true"
+        android:enabled="true"
+        android:onClick="setContentView" />
 
     <Button
         android:layout_width="100dp"
@@ -163,7 +166,7 @@
         android:text="0"
         android:id="@+id/button11"
         android:textColor="#ffffff"
-        android:background="#0015ff"
+        android:background="@drawable/my_button_bg"
         android:textStyle="bold"
         android:textSize="50dp"
         android:textAlignment="center"
@@ -185,4 +188,37 @@
         android:layout_below="@+id/button9"
         android:layout_toRightOf="@+id/button11"
         android:layout_toEndOf="@+id/button11" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText"
+        android:layout_alignParentBottom="true"
+        android:layout_alignLeft="@+id/button10"
+        android:layout_alignStart="@+id/button10"
+        android:layout_marginBottom="60dp"
+        android:layout_below="@+id/button10"
+        android:layout_alignRight="@+id/button12"
+        android:layout_alignEnd="@+id/button12"
+        android:textSize="35dp"
+        android:textColor="#00ff19"
+        android:textAlignment="center"
+        android:focusable="false"
+        android:clickable="false"
+        android:editable="false" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText2"
+        android:textSize="40dp"
+        android:textColor="#000000"
+        android:textAlignment="center"
+        android:layout_alignParentBottom="true"
+        android:layout_alignRight="@+id/editText"
+        android:layout_alignEnd="@+id/editText"
+        android:layout_alignLeft="@+id/editText"
+        android:layout_alignStart="@+id/editText"
+        android:visibility="invisible" />
+
 </RelativeLayout>
