Android ABS Braking

--- a/BrakingSystem/Android/app/src/main/res/layout/content_main.xml
+++ b/BrakingSystem/Android/app/src/main/res/layout/content_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_main"
     android:layout_width="match_parent"
@@ -16,6 +17,18 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="Hello Pi Braking System"
         android:id="@+id/TextView1" />
+
+    <ToggleButton
+        android:text="ToggleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ABSButton"
+        style="@style/Animation.AppCompat.DropDownUp"
+        android:textOff="ABS: OFF"
+        android:textOn="ABS: ON"
+        android:layout_below="@+id/TextView1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="186dp" />
 </RelativeLayout>
