--- a/Dashboard_Application/Controls/app/src/main/res/layout/activity_home.xml
+++ b/Dashboard_Application/Controls/app/src/main/res/layout/activity_home.xml
@@ -22,18 +22,6 @@
         android:textAlignment="center"
         android:textColor="#ffffff" />
 
-    <ImageButton
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:id="@+id/btnLightControls"
-        android:background="@android:drawable/ic_menu_compass"
-        android:layout_marginTop="136dp"
-        android:layout_below="@+id/txtControlCenterHome"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:backgroundTint="#f6eeba"
-        android:backgroundTintMode="screen" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -49,5 +37,19 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textColor="#ffffff" />
+
+    <ImageButton
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:id="@+id/btnLightControls"
+        android:background="@android:drawable/ic_menu_compass"
+        android:backgroundTint="#f6eeba"
+        android:backgroundTintMode="screen"
+        android:layout_alignBottom="@+id/lblLightingControls"
+        android:layout_alignRight="@+id/lblLightingControls"
+        android:layout_alignEnd="@+id/lblLightingControls"
+        android:layout_marginRight="70dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginBottom="63dp" />
 
 </RelativeLayout>
