--- a/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
+++ b/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
@@ -23,23 +23,6 @@
     <Switch
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="High Beams"
-        android:id="@+id/switchHighBeams"
-        android:textSize="28dp"
-        android:textColor="#ffffff"
-        android:trackTint="#ffffff"
-        android:splitTrack="false"
-        android:showText="true"
-        android:switchPadding="15dp"
-        android:switchMinWidth="10dp"
-        android:layout_marginTop="33dp"
-        android:layout_below="@+id/switchFogLights"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:text="Head Lights"
         android:id="@+id/switchHeadLights"
         android:textSize="28dp"
@@ -49,7 +32,7 @@
         android:showText="true"
         android:switchPadding="15dp"
         android:switchMinWidth="10dp"
-        android:layout_below="@+id/switchFogLights"
+        android:layout_above="@+id/switchHighBeams"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
@@ -65,8 +48,25 @@
         android:showText="true"
         android:switchPadding="15dp"
         android:switchMinWidth="10dp"
-        android:layout_marginTop="15dp"
-        android:layout_below="@+id/lblLightingControls"
+        android:layout_marginTop="41dp"
+        android:layout_below="@+id/switchHeadLights"
+        android:layout_alignRight="@+id/switchHeadLights"
+        android:layout_alignEnd="@+id/switchHeadLights" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="High Beams"
+        android:id="@+id/switchHighBeams"
+        android:textSize="28dp"
+        android:textColor="#ffffff"
+        android:trackTint="#ffffff"
+        android:splitTrack="false"
+        android:showText="true"
+        android:switchPadding="15dp"
+        android:switchMinWidth="10dp"
+        android:layout_marginBottom="111dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 </RelativeLayout>
