Added comments and button press animations

--- a/SafetyAndAccessControlSystem/AndroidApp/app/src/main/res/layout/activity_main.xml
+++ b/SafetyAndAccessControlSystem/AndroidApp/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:text="1"
         android:id="@+id/button"
         android:textColor="#ffffff"
-        android:background="@drawable/my_button_bg"
+        android:background="@drawable/selector"
         android:textStyle="bold"
         android:textSize="50dp"
         android:textAlignment="center"
@@ -37,7 +37,7 @@
         android:text="2"
         android:id="@+id/button2"
         android:textColor="#ffffff"
-        android:background="@drawable/my_button_bg"
+        android:background="@drawable/selector"
         android:textStyle="bold"
         android:textSize="50dp"
         android:textAlignment="center"
@@ -51,7 +51,7 @@
         android:text="3"
         android:id="@+id/button3"
         android:textColor="#ffffff"
-        android:background="@drawable/my_button_bg"
+        android:background="@drawable/selector"
         android:textStyle="bold"
         android:textSize="50dp"
         android:textAlignment="center"
@@ -65,7 +65,7 @@
         android:text="4"
         android:id="@+id/button4"
         android:textColor="#ffffff"
-        android:background="@drawable/my_button_bg"
+        android:background="@drawable/selector"
         android:textStyle="bold"
         android:textSize="50dp"
         android:textAlignment="center"
@@ -79,7 +79,7 @@
         android:text="5"
         android:id="@+id/button5"
         android:textColor="#ffffff"
-        android:background="@drawable/my_button_bg"
+        android:background="@drawable/selector"
         android:textStyle="bold"
         android:textSize="50dp"
         android:textAlignment="center"
@@ -94,7 +94,7 @@
         android:text="6"
         android:id="@+id/button6"
         android:textColor="#ffffff"
-        android:background="@drawable/my_button_bg"
+        android:background="@drawable/selector"
         android:textStyle="bold"
         android:textSize="50dp"
         android:textAlignment="center"
@@ -108,7 +108,7 @@
         android:text="7"
         android:id="@+id/button7"
         android:textColor="#ffffff"
-        android:background="@drawable/my_button_bg"
+        android:background="@drawable/selector"
         android:textStyle="bold"
         android:textSize="50dp"
         android:textAlignment="center"
@@ -122,7 +122,7 @@
         android:text="8"
         android:id="@+id/button8"
         android:textColor="#ffffff"
-        android:background="@drawable/my_button_bg"
+        android:background="@drawable/selector"
         android:textStyle="bold"
         android:textSize="50dp"
         android:textAlignment="center"
@@ -137,7 +137,7 @@
         android:text="9"
         android:id="@+id/button9"
         android:textColor="#ffffff"
-        android:background="@drawable/my_button_bg"
+        android:background="@drawable/selector"
         android:textStyle="bold"
         android:textSize="50dp"
         android:textAlignment="center"
@@ -151,7 +151,7 @@
         android:text="CLEAR"
         android:id="@+id/button10"
         android:textColor="#000000"
-        android:background="#959595"
+        android:background="@drawable/selector"
         android:textStyle="bold"
         android:textSize="30dp"
         android:textAlignment="center"
@@ -166,7 +166,7 @@
         android:text="0"
         android:id="@+id/button11"
         android:textColor="#ffffff"
-        android:background="@drawable/my_button_bg"
+        android:background="@drawable/selector"
         android:textStyle="bold"
         android:textSize="50dp"
         android:textAlignment="center"
@@ -181,7 +181,7 @@
         android:text="&lt;-"
         android:id="@+id/button12"
         android:textColor="#000000"
-        android:background="#959595"
+        android:background="@drawable/selector"
         android:textStyle="bold"
         android:textSize="50dp"
         android:textAlignment="center"
@@ -220,5 +220,22 @@
         android:layout_alignLeft="@+id/editText"
         android:layout_alignStart="@+id/editText"
         android:visibility="invisible" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/editText3"
+        android:textSize="35dp"
+        android:textColor="#00ff19"
+        android:textAlignment="center"
+        android:focusable="false"
+        android:clickable="false"
+        android:editable="false"
+        android:layout_above="@+id/editText2"
+        android:layout_alignRight="@+id/editText"
+        android:layout_alignEnd="@+id/editText"
+        android:layout_alignLeft="@+id/editText"
+        android:layout_alignStart="@+id/editText"
+        android:layout_alignTop="@+id/editText" />
 
 </RelativeLayout>
