--- a/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
+++ b/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -21,39 +20,6 @@
         android:layout_centerHorizontal="true"
         android:textColor="#ffffff" />
 
-    <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Head Lights"
-        android:id="@+id/switchHeadLights"
-        android:textSize="28dp"
-        android:textColor="#ffffff"
-        android:trackTint="#ffffff"
-        android:splitTrack="false"
-        android:showText="true"
-        android:switchPadding="15dp"
-        android:switchMinWidth="10dp"
-        android:layout_above="@+id/switchHighBeams"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="High Beams"
-        android:id="@+id/switchHighBeams"
-        android:textSize="28dp"
-        android:textColor="#ffffff"
-        android:trackTint="#ffffff"
-        android:splitTrack="false"
-        android:showText="true"
-        android:switchPadding="15dp"
-        android:switchMinWidth="10dp"
-        android:layout_marginBottom="111dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
     <ImageView
         android:layout_width="150dp"
         android:layout_height="110dp"
@@ -65,5 +31,40 @@
         android:id="@+id/iconHighBeams"
         android:visibility="invisible"
         android:elevation="24dp"
-        android:tint="@android:color/holo_blue_bright" />
+        android:tint="@android:color/holo_blue_bright"
+        android:backgroundTintMode="add" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Head Lights"
+        android:id="@+id/switchHeadLights"
+        android:textColor="#ffffff"
+        android:trackTint="#ffffff"
+        android:splitTrack="false"
+        android:showText="true"
+        android:switchPadding="15dp"
+        android:switchMinWidth="10dp"
+        android:textSize="40dp"
+        android:layout_below="@+id/iconHighBeams"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        tools:style="@android:style/Widget.Holo.Light.CompoundButton.Switch" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="High Beams"
+        android:id="@+id/switchHighBeams"
+        android:textColor="#ffffff"
+        android:trackTint="#ffffff"
+        android:splitTrack="false"
+        android:showText="true"
+        android:switchPadding="15dp"
+        android:switchMinWidth="10dp"
+        android:textSize="40dp"
+        android:layout_below="@+id/switchHeadLights"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        tools:style="@android:style/Widget.Holo.Light.CompoundButton.Switch" />
 </RelativeLayout>
