--- a/SafetyAndAccessControlSystem/AndroidApp/app/src/main/res/layout/activity_main.xml
+++ b/SafetyAndAccessControlSystem/AndroidApp/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="saac.androidapp.Main"
-    android:background="#000000">
+    android:background="#575757">
 
     <Button
         android:layout_width="100dp"
@@ -237,5 +237,41 @@
         android:layout_alignLeft="@+id/editText"
         android:layout_alignStart="@+id/editText"
         android:layout_alignTop="@+id/editText" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton"
+        android:src="@mipmap/lockityo"
+        android:background="@drawable/selector"
+        android:layout_alignParentTop="true"
+        android:layout_toStartOf="@+id/imageButton3"
+        android:layout_toLeftOf="@+id/imageButton3"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton2"
+        android:src="@mipmap/unlockityo"
+        android:background="@drawable/selector"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/imageButton3"
+        android:layout_toRightOf="@+id/imageButton3"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton3"
+        android:src="@mipmap/alarmonyo"
+        android:background="@drawable/selector"
+        android:layout_alignTop="@+id/imageButton2"
+        android:layout_centerHorizontal="true"
+        android:layout_alignBottom="@+id/imageButton"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" />
 
 </RelativeLayout>
