--- a/BrakingSystem/Button/app/src/main/res/layout/activity_main.xml
+++ b/BrakingSystem/Button/app/src/main/res/layout/activity_main.xml
@@ -13,55 +13,28 @@
     tools:context="ist440w.button.MainActivity">
 
 
-    <ImageButton
-        android:alpha="0"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/tire_b"
-        android:layout_marginRight="118dp"
-        android:layout_marginEnd="118dp"
-        android:id="@+id/imageButton"
-        android:layout_alignTop="@+id/imageButton3"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:contentDescription="tiresbutton" />
+        android:text="HelloWorld"
+        android:id="@+id/result_text"
+        android:layout_gravity="center_horizontal"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
 
-    <ImageButton
-        android:alpha="0"
+        android:layout_below="@+id/toggle_button_1"
+        android:layout_alignLeft="@+id/toggle_button_1"
+        android:layout_alignStart="@+id/toggle_button_1"
+        android:layout_marginTop="21dp" />
+
+    <ToggleButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/tire_b"
-        android:layout_marginLeft="75dp"
-        android:layout_marginStart="75dp"
-        android:layout_marginTop="106dp"
-        android:id="@+id/imageButton3"
+        android:id="@+id/toggle_button_1"
+        android:textOn="Brake On"
+        android:textOff="Brake Off"
+        android:layout_gravity="center_horizontal"
+        android:onClick="changeButtonState"
+        android:layout_marginTop="298dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:contentDescription="tiresbutton" />
-
-    <ImageButton
-        android:alpha="0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/tire_b"
-        android:layout_marginBottom="97dp"
-        android:id="@+id/imageButton2"
-        android:layout_alignParentBottom="true"
-        android:layout_alignLeft="@+id/imageButton3"
-        android:layout_alignStart="@+id/imageButton3"
-        android:contentDescription="tiresbutton" />
-
-    <ImageButton
-        android:alpha="0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/tire_b"
-        android:id="@+id/imageButton4"
-        android:layout_alignTop="@+id/imageButton2"
-        android:layout_alignLeft="@+id/imageButton"
-        android:layout_alignStart="@+id/imageButton"
-        android:contentDescription="tiresbutton" />
-
-
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
