--- a/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
+++ b/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
@@ -59,7 +59,7 @@
         android:layout_height="110dp"
         android:src="@drawable/icon_head_lights"
         android:layout_marginTop="30dp"
-        android:id="@+id/imageView"
+        android:id="@+id/iconHeadLights"
         android:visibility="invisible"
         android:elevation="24dp"
         android:tint="@android:color/holo_orange_light"
@@ -77,7 +77,37 @@
         android:elevation="24dp"
         android:tint="@android:color/holo_blue_bright"
         android:backgroundTintMode="add"
-        android:layout_alignTop="@+id/imageView"
-        android:layout_alignRight="@+id/switchHeadLights"
-        android:layout_alignEnd="@+id/switchHeadLights" />
+        android:layout_alignTop="@+id/iconHeadLights"
+        android:layout_toRightOf="@+id/iconHeadLights"
+        android:layout_toEndOf="@+id/iconHeadLights" />
+
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="110dp"
+        android:src="@drawable/icon_left_turn"
+        android:id="@+id/iconLeftTurn"
+        android:visibility="invisible"
+        android:elevation="24dp"
+        android:tint="@android:color/holo_blue_bright"
+        android:backgroundTintMode="add"
+        android:layout_alignTop="@+id/iconHighBeams"
+        android:layout_toRightOf="@+id/iconHighBeams"
+        android:layout_toEndOf="@+id/iconHighBeams" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Left Turn Signal"
+        android:id="@+id/switchLeftTurn"
+        android:textColor="#ffffff"
+        android:trackTint="#ffffff"
+        android:splitTrack="false"
+        android:showText="true"
+        android:switchPadding="15dp"
+        android:switchMinWidth="10dp"
+        android:textSize="40dp"
+        tools:style="@android:style/Widget.Holo.Light.CompoundButton.Switch"
+        android:layout_below="@+id/switchHighBeams"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
