--- a/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
+++ b/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
@@ -10,6 +10,23 @@
     tools:context="com.ist440.controls.LightsControl"
     android:background="#494949">
 
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Left Turn Signal"
+        android:id="@+id/switch1"
+        android:textColor="#ffffff"
+        android:trackTint="#ffffff"
+        android:splitTrack="false"
+        android:showText="true"
+        android:switchPadding="15dp"
+        android:switchMinWidth="10dp"
+        android:textSize="40dp"
+        tools:style="@android:style/Widget.Holo.Light.CompoundButton.Switch"
+        android:layout_below="@+id/switchHighBeams"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
     <TextView
         android:text="Lighting Controls"
         android:layout_width="wrap_content"
@@ -90,15 +107,31 @@
         android:elevation="24dp"
         android:tint="@android:color/holo_blue_bright"
         android:backgroundTintMode="add"
-        android:layout_alignTop="@+id/iconHighBeams"
+        android:layout_above="@+id/switchHeadLights"
         android:layout_toRightOf="@+id/iconHighBeams"
         android:layout_toEndOf="@+id/iconHighBeams" />
+
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="110dp"
+        android:src="@drawable/icon_left_turn"
+        android:id="@+id/iconRightTurn"
+        android:visibility="invisible"
+        android:elevation="24dp"
+        android:tint="@android:color/holo_blue_bright"
+        android:backgroundTintMode="add"
+        android:layout_alignTop="@+id/iconLeftTurn"
+        android:layout_toRightOf="@+id/iconLeftTurn"
+        android:layout_toEndOf="@+id/iconLeftTurn"
+        android:layout_marginLeft="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="15dp" />
 
     <Switch
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Left Turn Signal"
-        android:id="@+id/switchLeftTurn"
+        android:text="Right Turn Signal"
+        android:id="@+id/switchRightTurn"
         android:textColor="#ffffff"
         android:trackTint="#ffffff"
         android:splitTrack="false"
@@ -107,7 +140,7 @@
         android:switchMinWidth="10dp"
         android:textSize="40dp"
         tools:style="@android:style/Widget.Holo.Light.CompoundButton.Switch"
-        android:layout_below="@+id/switchHighBeams"
+        android:layout_below="@+id/switch1"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 </RelativeLayout>
