fixed toggle name

--- a/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
+++ b/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Left Turn Signal"
-        android:id="@+id/switch1"
+        android:id="@+id/switchLeftTurn"
         android:textColor="#ffffff"
         android:trackTint="#ffffff"
         android:splitTrack="false"
@@ -111,7 +111,7 @@
         android:switchMinWidth="10dp"
         android:textSize="40dp"
         tools:style="@android:style/Widget.Holo.Light.CompoundButton.Switch"
-        android:layout_below="@+id/switch1"
+        android:layout_below="@+id/switchLeftTurn"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
