--- a/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
+++ b/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
@@ -10,23 +10,6 @@
     tools:context="com.ist440.controls.LightsControl"
     android:background="#494949">
 
-    <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Left Turn Signal"
-        android:id="@+id/switchLeftTurn"
-        android:textColor="#ffffff"
-        android:trackTint="#ffffff"
-        android:splitTrack="false"
-        android:showText="true"
-        android:switchPadding="15dp"
-        android:switchMinWidth="10dp"
-        android:textSize="40dp"
-        tools:style="@android:style/Widget.Holo.Light.CompoundButton.Switch"
-        android:layout_below="@+id/switchHighBeams"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
     <TextView
         android:text="Lighting Controls"
         android:layout_width="wrap_content"
@@ -52,24 +35,10 @@
         android:layout_below="@+id/iconHighBeams"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        tools:style="@android:style/Widget.Holo.Light.CompoundButton.Switch" />
-
-    <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="High Beams"
-        android:id="@+id/switchHighBeams"
-        android:textColor="#ffffff"
-        android:trackTint="#ffffff"
-        android:splitTrack="false"
-        android:showText="true"
-        android:switchPadding="15dp"
-        android:switchMinWidth="10dp"
-        android:textSize="40dp"
-        android:layout_below="@+id/switchHeadLights"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        tools:style="@android:style/Widget.Holo.Light.CompoundButton.Switch" />
+        tools:style="@android:style/Widget.Holo.Light.CompoundButton.Switch"
+        android:layout_toStartOf="@+id/iconRightTurn"
+        android:layout_alignRight="@+id/switchHighBeams"
+        android:layout_alignEnd="@+id/switchHighBeams" />
 
     <ImageView
         android:layout_width="150dp"
@@ -140,4 +109,44 @@
         android:layout_alignTop="@+id/iconLeftTurn"
         android:layout_toRightOf="@+id/iconLeftTurn"
         android:layout_toEndOf="@+id/iconLeftTurn" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="High Beams"
+        android:id="@+id/switchHighBeams"
+        android:textColor="#ffffff"
+        android:trackTint="#ffffff"
+        android:splitTrack="false"
+        android:showText="true"
+        android:switchPadding="15dp"
+        android:switchMinWidth="10dp"
+        android:textSize="40dp"
+        tools:style="@android:style/Widget.Holo.Light.CompoundButton.Switch"
+        android:layout_below="@+id/switchHeadLights"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/switchRightTurn"
+        android:layout_alignEnd="@+id/switchRightTurn" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Left Turn Signal"
+        android:id="@+id/switchLeftTurn"
+        android:textColor="#ffffff"
+        android:trackTint="#ffffff"
+        android:splitTrack="false"
+        android:showText="true"
+        android:switchPadding="15dp"
+        android:switchMinWidth="10dp"
+        android:textSize="40dp"
+        tools:style="@android:style/Widget.Holo.Light.CompoundButton.Switch"
+        android:layout_below="@+id/switchHighBeams"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/iconRightTurn"
+        android:layout_alignRight="@+id/switchRightTurn"
+        android:layout_alignEnd="@+id/switchRightTurn"
+        android:layout_toLeftOf="@+id/iconRightTurn" />
 </RelativeLayout>
