--- a/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
+++ b/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
@@ -97,38 +97,6 @@
         android:layout_toRightOf="@+id/iconHighBeams"
         android:layout_toEndOf="@+id/iconHighBeams" />
 
-    <ImageView
-        android:layout_width="150dp"
-        android:layout_height="110dp"
-        android:src="@drawable/icon_left_turn"
-        android:id="@+id/iconRightTurn"
-        android:visibility="invisible"
-        android:elevation="24dp"
-        android:tint="@android:color/holo_blue_bright"
-        android:backgroundTintMode="add"
-        android:layout_alignTop="@+id/iconLeftTurn"
-        android:layout_toRightOf="@+id/iconLeftTurn"
-        android:layout_toEndOf="@+id/iconLeftTurn" />
-
-    <Switch
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="High Beams"
-        android:id="@+id/switchHighBeams"
-        android:textColor="#ffffff"
-        android:trackTint="#ffffff"
-        android:splitTrack="false"
-        android:showText="true"
-        android:switchPadding="15dp"
-        android:switchMinWidth="10dp"
-        android:textSize="40dp"
-        tools:style="@android:style/Widget.Holo.Light.CompoundButton.Switch"
-        android:layout_below="@+id/switchHeadLights"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/switchRightTurn"
-        android:layout_alignEnd="@+id/switchRightTurn" />
-
     <Switch
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -149,4 +117,66 @@
         android:layout_alignRight="@+id/switchRightTurn"
         android:layout_alignEnd="@+id/switchRightTurn"
         android:layout_toLeftOf="@+id/iconRightTurn" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="High Beams"
+        android:id="@+id/switchHighBeams"
+        android:textColor="#ffffff"
+        android:trackTint="#ffffff"
+        android:splitTrack="false"
+        android:showText="true"
+        android:switchPadding="15dp"
+        android:switchMinWidth="10dp"
+        android:textSize="40dp"
+        tools:style="@android:style/Widget.Holo.Light.CompoundButton.Switch"
+        android:layout_below="@+id/switchHeadLights"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hazzard Light"
+        android:textColor="#ffffff"
+        android:trackTint="#ffffff"
+        android:splitTrack="false"
+        android:showText="true"
+        android:switchPadding="15dp"
+        android:switchMinWidth="10dp"
+        android:textSize="40dp"
+        tools:style="@android:style/Widget.Holo.Light.CompoundButton.Switch"
+        android:id="@+id/switchHazzardLight"
+        android:layout_below="@+id/iconRightTurn"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="110dp"
+        android:src="@drawable/icon_left_turn"
+        android:id="@+id/iconRightTurn"
+        android:visibility="invisible"
+        android:elevation="24dp"
+        android:tint="@android:color/holo_blue_bright"
+        android:backgroundTintMode="add"
+        android:layout_alignTop="@+id/iconLeftTurn"
+        android:layout_alignLeft="@+id/switchHazzardLight"
+        android:layout_alignStart="@+id/switchHazzardLight" />
+
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="110dp"
+        android:src="@drawable/icon_left_turn"
+        android:visibility="invisible"
+        android:elevation="24dp"
+        android:tint="@android:color/holo_blue_bright"
+        android:backgroundTintMode="add"
+        android:layout_above="@+id/switchHazzardLight"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="30dp"
+        android:layout_marginEnd="30dp"
+        android:id="@+id/iconHazzardLight" />
 </RelativeLayout>
