--- a/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
+++ b/Dashboard_Application/Controls/app/src/main/res/layout/activity_lights_control.xml
@@ -138,7 +138,7 @@
     <Switch
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hazzard Light"
+        android:text="Hazard Light"
         android:textColor="#ffffff"
         android:trackTint="#ffffff"
         android:splitTrack="false"
@@ -147,7 +147,7 @@
         android:switchMinWidth="10dp"
         android:textSize="40dp"
         tools:style="@android:style/Widget.Holo.Light.CompoundButton.Switch"
-        android:id="@+id/switchHazzardLight"
+        android:id="@+id/switchHazardLight"
         android:layout_below="@+id/iconRightTurn"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
@@ -162,8 +162,8 @@
         android:tint="@android:color/holo_blue_bright"
         android:backgroundTintMode="add"
         android:layout_alignTop="@+id/iconLeftTurn"
-        android:layout_alignLeft="@+id/switchHazzardLight"
-        android:layout_alignStart="@+id/switchHazzardLight" />
+        android:layout_alignLeft="@+id/switchHazardLight"
+        android:layout_alignStart="@+id/switchHazardLight" />
 
     <ImageView
         android:layout_width="150dp"
@@ -173,10 +173,10 @@
         android:elevation="24dp"
         android:tint="@android:color/holo_blue_bright"
         android:backgroundTintMode="add"
-        android:layout_above="@+id/switchHazzardLight"
+        android:layout_above="@+id/switchHazardLight"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="30dp"
         android:layout_marginEnd="30dp"
-        android:id="@+id/iconHazzardLight" />
+        android:id="@+id/iconHazardLight" />
 </RelativeLayout>
