--- a/BrakingSystem/PiBraking/app/src/main/res/layout/activity_pi_braking.xml
+++ b/BrakingSystem/PiBraking/app/src/main/res/layout/activity_pi_braking.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_pi_braking"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,28 +9,67 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/auto_pic_resize"
     tools:context="ist440.pibraking.PiBraking">
 
 
-    <Switch
-        android:text="Connect"
+    <ToggleButton
+        android:text="ToggleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="24dp"
-        android:id="@+id/connect" />
+        android:layout_below="@+id/imageView3"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="102dp"
+        android:id="@+id/absBrake"
+        android:textOff="ABS:OFF"
+        android:textOn="ABS:ON" />
 
-    <Button
-        android:text="Brake"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/allBrake"
-        android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/connect"
-        android:layout_toStartOf="@+id/connect"
-        android:layout_marginRight="51dp"
-        android:layout_marginEnd="51dp" />
+    <ImageView
+        android:layout_width="35dp"
+        android:layout_height="65dp"
+        app:srcCompat="@android:color/transparent"
+        android:id="@+id/imageView4"
+        android:background="#50ff2f2f"
+        android:layout_marginLeft="19dp"
+        android:layout_marginStart="19dp"
+        android:layout_above="@+id/absBrake"
+        android:layout_toRightOf="@+id/absBrake"
+        android:layout_toEndOf="@+id/absBrake" />
+
+    <ImageView
+        android:layout_width="35dp"
+        android:layout_height="65dp"
+        app:srcCompat="@android:color/transparent"
+        android:layout_marginTop="53dp"
+        android:id="@+id/imageView2"
+        android:background="#50ff2f2f"
+
+        android:layout_below="@+id/absBrake"
+        android:layout_alignLeft="@+id/imageView4"
+        android:layout_alignStart="@+id/imageView4" />
+
+    <ImageView
+        android:layout_width="35dp"
+        android:layout_height="65dp"
+        app:srcCompat="@android:color/transparent"
+        android:layout_marginTop="60dp"
+        android:id="@+id/imageView3"
+        android:background="#50ff2f2f"
+        android:layout_marginRight="38dp"
+        android:layout_marginEnd="38dp"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/absBrake"
+        android:layout_toStartOf="@+id/absBrake" />
+
+    <ImageView
+        android:layout_width="35dp"
+        android:layout_height="65dp"
+        app:srcCompat="@android:color/transparent"
+        android:id="@+id/imageView"
+        android:background="#50ff2f2f"
+
+        android:layout_alignTop="@+id/imageView2"
+        android:layout_alignLeft="@+id/imageView3"
+        android:layout_alignStart="@+id/imageView3" />
 
 </RelativeLayout>
